; ModuleID = '/home/carl/AnghaBench/vlc/modules/codec/gstreamer/extr_gstvlcvideosink.c_gst_vlc_video_sink_set_property.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/codec/gstreamer/extr_gstvlcvideosink.c_gst_vlc_video_sink_set_property.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32*, i32 }

@.str = private unnamed_addr constant [22 x i8] c"Invalid Allocator set\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32*, i32*)* @gst_vlc_video_sink_set_property to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gst_vlc_video_sink_set_property(i32* %0, i32 %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_3__*, align 8
  %10 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %11 = load i32*, i32** %8, align 8
  %12 = call i32 @VLC_UNUSED(i32* %11)
  %13 = load i32*, i32** %5, align 8
  %14 = call %struct.TYPE_3__* @GST_VLC_VIDEO_SINK(i32* %13)
  store %struct.TYPE_3__* %14, %struct.TYPE_3__** %9, align 8
  %15 = load i32, i32* %6, align 4
  switch i32 %15, label %55 [
    i32 130, label %16
    i32 129, label %44
    i32 128, label %50
  ]

16:                                               ; preds = %4
  %17 = load i32*, i32** %7, align 8
  %18 = call i64 @g_value_get_pointer(i32* %17)
  %19 = inttoptr i64 %18 to i32*
  store i32* %19, i32** %10, align 8
  %20 = load i32*, i32** %10, align 8
  %21 = call i32 @GST_IS_VLC_PICTURE_PLANE_ALLOCATOR(i32* %20)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %38

23:                                               ; preds = %16
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 2
  %26 = load i32, i32* %25, align 8
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %33

28:                                               ; preds = %23
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 2
  %31 = load i32, i32* %30, align 8
  %32 = call i32 @gst_object_unref(i32 %31)
  br label %33

33:                                               ; preds = %28, %23
  %34 = load i32*, i32** %10, align 8
  %35 = call i32 @gst_object_ref(i32* %34)
  %36 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i32 0, i32 2
  store i32 %35, i32* %37, align 8
  br label %43

38:                                               ; preds = %16
  %39 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %40 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %39, i32 0, i32 1
  %41 = load i32*, i32** %40, align 8
  %42 = call i32 @msg_Err(i32* %41, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  br label %43

43:                                               ; preds = %38, %33
  br label %56

44:                                               ; preds = %4
  %45 = load i32*, i32** %7, align 8
  %46 = call i64 @g_value_get_pointer(i32* %45)
  %47 = inttoptr i64 %46 to i32*
  %48 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %49 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %48, i32 0, i32 1
  store i32* %47, i32** %49, align 8
  br label %56

50:                                               ; preds = %4
  %51 = load i32*, i32** %7, align 8
  %52 = call i32 @g_value_get_boolean(i32* %51)
  %53 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %54 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %53, i32 0, i32 0
  store i32 %52, i32* %54, align 8
  br label %56

55:                                               ; preds = %4
  br label %56

56:                                               ; preds = %55, %50, %44, %43
  ret void
}

declare dso_local i32 @VLC_UNUSED(i32*) #1

declare dso_local %struct.TYPE_3__* @GST_VLC_VIDEO_SINK(i32*) #1

declare dso_local i64 @g_value_get_pointer(i32*) #1

declare dso_local i32 @GST_IS_VLC_PICTURE_PLANE_ALLOCATOR(i32*) #1

declare dso_local i32 @gst_object_unref(i32) #1

declare dso_local i32 @gst_object_ref(i32*) #1

declare dso_local i32 @msg_Err(i32*, i8*) #1

declare dso_local i32 @g_value_get_boolean(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
